# pwd-manager

./: .env.example  Cargo.toml  Makefile.toml  readme.md  req.http
app/: Cargo.toml
app/src/: main.rs
essentials/: Cargo.toml
essentials/src/: lib.rs
essentials/src/cipher/: mod.rs
essentials/src/key/: mod.rs
essentials/src/password/: mod.rs
gui/: Cargo.toml
gui/src/: app.rs  egui_app.rs  lib.rs  main.rs  mutex.rs
gui/src/components/: button_action.rs  button_with_subtext.rs  copy_text.rs  input_with_label.rs  left_panel.rs  mod.rs  record_list_item.rs  record_view.rs
gui/src/pages/: edit_password.rs  main.rs  mod.rs  new_password.rs  welcome.rs
gui/src/store/: confirms.rs  forms.rs  mod.rs  settings.rs  vault.rs
gui/src/tools/: lazy_loader.rs  mod.rs
server/: Cargo.toml
server/src/: err.rs  lib.rs  main.rs
server/src/meili/: mod.rs
server/src/password/: delete_password.rs  edit_password.rs  get_password.rs  list_passwords.rs  mod.rs  new_password.rs
