[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gui = { version = "0.1.0", path = "../gui" }
server = { version = "0.1.0", path = "../server" }
tokio = { version = "1.24.1", features = ["full"] }
