[package]
name = "essentials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
cbc = { version = "0.1.2", features = ["std", "alloc"] }
cuid = "1.2.0"
eyre = "0.6.8"
futures = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
