[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
ehttp = "0.2.0"
essentials = { version = "0.1.0", path = "../essentials" }
eyre = "0.6.8"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
poll-promise = { version = "0.2.0", features = ["tokio"] }
reqwest = { version = "0.11.13", features = ["rustls-tls", "json"] }
serde_json = "1.0.91"
server = { version = "0.1.0", path = "../server" }
tokio = { version = "1.24.0", features = ["full"] }
tracing-subscriber = "0.3.16"
